# graphdoc

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.org  adadad.texi  bb.texi  cabal.project  channels-lock.scm  graphdoc.cabal  guix.scm  hmm.texi  manifest.scm  new.texi  notes.org  out.texi  planning.org  treedoc.cabal
.guix/modules/: graphdoc-package.scm
data/01folder/: 01file.texi
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.2/: package.cache  treedoc-0.1.0.0-inplace.conf
example/data/01folder/: 01file.md  02file.md
example/data/02folder/: 03file.md  04file.md
old/: Makefile  README.md  notes.org
old/config/: borg.yaml
old/examples/closed-html/: basics.html  basics.md  basics.org
old/examples/defunct/markdown-example/: convertEach.sh
old/examples/defunct/texinfo/: 001installation.texi  002index.texi  003instance.texi  004syntax.texi  005computed.texi  006class-and-style.texi  007conditional.texi  008list.texi  009events.texi  010forms.texi  011components.texi  101components-registration.texi  102components-props.texi  103components-custom-events.texi  104components-slots.texi  105components-dynamic-async.texi  106components-edge-cases.texi  201transitions.texi  202transitioning-state.texi  301mixins.texi  302custom-directive.texi  303render-function.texi  304plugins.texi  305filters.texi  401single-file-components.texi  402testing.texi  403typescript.texi  404deployment.texi  501routing.texi  502state-management.texi  504security.texi  553ssr.texi  601reactivity.texi  701migration.texi  702migration-vue-router.texi  703migration-vuex.texi  801comparison.texi  802join.texi  803team.texi  makeInfo.sh
old/examples/normal-html/: PicoLisp Reference.html  out.org  picolisp.texi
old/examples/rst-sphinx/source/: conf.py  index.rst  level_one.rst
old/examples/texinfo/: minimal.texi
old/old-src/: Makefile  assimilate.c  borg  config.c  main.c  util.c
old/src/: DocTree.hs  Main.hs  backup.hs  notes.hs  test.hs
old/src/TreeReaders/: Alphabetical.hs
src/: Graphdoc.hs  Main.hs  Treedoc.hs  assimilate.c  config.c  define.c  list.c  main.c  org.c  org.h  util.c
src-exe/: Main.hs  PandocOptionsUtil.hs
src/Graphdoc/: Analysis.hs  App.hs  Conversion.hs  Definition.hs  Output.hs  Parsing.hs  Util.hs
src/Graphdoc/Analysis/: Book.hs  CLI.hs  HTML.hs  Opt.hs  Util.hs
src/Graphdoc/Analysis/HTML/: Links.hs
src/Graphdoc/Conversion/: CLI.hs  Opt.hs  Texinfo.hs  Util.hs
src/Graphdoc/Formats/: GenericMarkup.hs  HTML.hs
src/Graphdoc/Output/: Texinfo.hs  Util.hs
src/Graphdoc/Parsing/: Blocks.hs
src/Text/: Graphdoc.hs
src/Text/Graphdoc/: Class.hs  Definition.hs  Error.hs  Output.hs  Parsing.hs  Readers.hs  Utils.hs  Writers.hs
src/Text/Graphdoc/Analysis/: Book.hs
src/Text/Graphdoc/Class/: GraphdocIO.hs  GraphdocMonad.hs
src/Text/Graphdoc/Conversion/: Texinfo.hs
src/Text/Graphdoc/Graph/: Definition.hs  Utils.hs
src/Text/Graphdoc/Parsing/: Blocks.hs  Inlines.hs  Shared.hs  Util.hs
src/Text/Graphdoc/Readers/: Book.hs  HTML.hs
src/Text/Graphdoc/Writers/: Texinfo.hs
src/Treedoc/: App.hs  Class.hs  Converter.hs  Converters.hs  Definition.hs  Readers.hs  TreeUtil.hs  Util.hs  Writers.hs
src/Treedoc/App/: CommandLineOptions.hs  Opt.hs
src/Treedoc/Class/: Readable.hs  Writable.hs
src/Treedoc/Formats/: GenericMarkup.hs  Screen.hs  Texinfo.hs
src/Treedoc/GenericMarkdown/: Reader.hs  Writer.hs
src/Treedoc/GenericMarkup/: .#Writer.hs  Reader.hs  Writer.hs
src/Treedoc/Texinfo/: Writer.hs
test/: test-treedoc.hs  test.borg
test/data/genericmarkup/example1/01folder/: 01file.md
test/output/genericmarkup/out1/example1/01folder/: 01file.org
test/output/texinfo/: out1.texi
