cabal-version:       >=1.10
name:                graphdoc
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Documentation from any format, to any format, on your disk.

-- A longer description of the package.
-- description:         TODO

homepage:            https://github.com/Tass0sm/graphdoc
bug-reports:         https://github.com/Tass0sm/graphdoc/issues
license:             GPL-3
license-file:        LICENSE
author:              Tassos Manganaris
maintainer:          tassos.manganaris@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md
                     README.org

library
  -- Modules exported by the library.
  exposed-modules:     Graphdoc
                     , Graphdoc.Analysis
                     , Graphdoc.Conversion
                     , Graphdoc.Output

  -- Modules included in this library but not exported.
  other-modules:       Graphdoc.Analysis.Util
                     , Graphdoc.Analysis.HTML
                     , Graphdoc.Conversion.Util
                     , Graphdoc.Conversion.Texinfo
                     , Graphdoc.Output.Texinfo
                     , Graphdoc.Definition
                     , Graphdoc.Analysis.HTML.Links

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.14 && <4.15
                     , text >=1.2 && <1.3
                     , containers >=0.6 && <0.7
                     , directory
                     , algebraic-graphs
                     , pandoc-types
                     , filepath
                     , tagsoup
                     , path

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


executable graphdoc
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       PandocOptionsUtil

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       graphdoc
                     , pandoc
                     , filepath
                     , base >=4.14 && <4.15
                     , text >=1.2 && <1.3
                     , containers >=0.6 && <0.7
                     , algebraic-graphs

  hs-source-dirs:      src-exe
  default-language:    Haskell2010


test-suite graphdoc-test
  default-language:    Haskell2010

  -- The interface type and version of the test suite.
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             test-treedoc.hs
  build-depends:       base >=4.14 && <4.15
                     , text >=1.2 && <1.3
                     , containers >=0.6 && <0.7
                     , pandoc
                     , graphdoc