cabal-version:       >=1.10
name:                graphdoc
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Documentation from any format, to any format, on your disk.

-- A longer description of the package.
-- description:         TODO

homepage:            https://github.com/Tass0sm/graphdoc
bug-reports:         https://github.com/Tass0sm/graphdoc/issues
license:             GPL-3
license-file:        LICENSE
author:              Tassos Manganaris
maintainer:          tassos.manganaris@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple


-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md
                     README.org

library
  exposed-modules:     Graphdoc
                     , Graphdoc.Analysis
                     , Graphdoc.Conversion
                     , Graphdoc.Output
                     , Graphdoc.Parsing

  other-modules:       Graphdoc.Analysis.HTML
                     , Graphdoc.Analysis.Book
                     , Graphdoc.Conversion.Texinfo
                     , Graphdoc.Output.Texinfo
                     , Graphdoc.Parsing.Blocks
                     , Graphdoc.Parsing.Inlines
                     , Graphdoc.Parsing.Util
                     , Graphdoc.Definition

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:       base
                     , text
                     , containers
                     , pandoc-types
                     , pandoc
                     , parsec
                     , mtl

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


executable graphdoc
  main-is:             Main.hs
  other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:       base
                     , text
                     , containers
                     , pandoc
                     , graphdoc

  hs-source-dirs:      src-exe
  default-language:    Haskell2010


test-suite graphdoc-test
  default-language:    Haskell2010

  -- The interface type and version of the test suite.
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             test-treedoc.hs
  build-depends:       base >=4.14 && <4.15
                     , text >=1.2 && <1.3
                     , containers >=0.6 && <0.7
                     , pandoc
                     , graphdoc